fourth draft of report and corresponding code

--- a/report/pers_schedule/main.tex
+++ b/report/pers_schedule/main.tex
@@ -22,6 +22,10 @@
 \usepackage{titlesec}
 \usepackage{caption}
 \usepackage[shortlabels]{enumitem}
+\usepackage{setspace}
+
+\floatstyle{plaintop}
+\restylefloat{table}
 
 \usetikzlibrary{shapes.geometric, arrows}
 
@@ -53,6 +57,7 @@
 \maketitle
 
 \input{mainmatter/abstract}
+\doublespacing
 \input{mainmatter/introduction}
 \input{mainmatter/joint_model_framework}
 \input{mainmatter/pers_biopsy_framework}
