--- a/report/pers_schedule/mainmatter/pers_schedule_prias.tex
+++ b/report/pers_schedule/mainmatter/pers_schedule_prias.tex
@@ -2,11 +2,11 @@
 
 \section{Personalized schedules for patients in PRIAS}
 \label{sec : pers_schedule_PRIAS}
-Our work is motivated by the PRIAS program. To demonstrate how the personalized schedules work, we apply them to the patients enrolled in PRIAS. To this end, we divide the PRIAS data set into training(5264 patients) and demonstration data sets (3 patients). We fit a joint model to the training data set and then use it to create a personalized schedule for patients in demonstration data set. We fit the joint model using the R package JMbayes \citep{rizopoulosJMbayes}, which uses the Bayesian methodology to estimate the model parameters.
+To demonstrate how the personalized schedules work, we apply them to the patients enrolled in PRIAS. To this end, we divide the PRIAS data set into training(5264 patients) and demonstration data sets (3 patients). We fit a joint model to the training data set and then use it to create personalized schedules for patients in demonstration data set. We fit the joint model using the R package JMbayes \citep{rizopoulosJMbayes}, which uses the Bayesian methodology to estimate the model parameters.
 
 \subsection{Fitting the joint model to PRIAS dataset}
 \label{subsec : jm_fit_prias}
-The training data set $\mathcal{D}^{PRIAS}$ contains information about 5264 prostate cancer patients who satisfied the conditions for enrollment in AS. For every patient the age at the time of induction in AS was recorded. PSA was measured every 3 months for first 2 years and every 6 months thereafter. To detect GR, biopsies were conducted at different time points on the basis of a predetermined schedule as well as PSA-DT as described in Section \ref{sec : introduction}. For the longitudinal analysis of PSA measurements we used $\log_2 PSA$ measurements instead of the raw data. The log transformation was done because the PSA scores take very large values around the time of disease progression. This indicated that the underlying distribution for PSA values was right skewed. The longitudinal sub-model of the joint model we fit is given by:
+The training data set $\mathcal{D}^{PRIAS}$, defined as in Section \ref{subsec : jm_specification} contains PSA measurements and time intervals in which GR was detected, for 5264 prostate cancer patients. For every patient the age at the time of induction in AS was recorded. PSA was measured every 3 months for first 2 years and every 6 months thereafter. To detect GR, biopsies were conducted at different time points on the basis of a predetermined schedule as well as PSA-DT as described in Section \ref{sec : introduction}. For the longitudinal analysis of PSA measurements we used $\log_2 PSA$ measurements instead of the raw data. This because the PSA scores take very large values around the time of disease progression, indicating that the underlying distribution for PSA values is right skewed. The longitudinal sub-model of the joint model we fit is given by:
 
 \begin{equation}
 \label{eq : long_model_prias}
@@ -17,7 +17,7 @@ m_i(t) &= (\beta_0 + b_{i0}) + \beta_1 (Age-70) + \beta_2 (Age-70)^2\\
 \varepsilon_i(t) & \sim N(0, \sigma^2),\\
 \end{aligned}
 \end{equation}
-where, the measurement error $\varepsilon_i(t)$ is assumed normally distributed with mean zero and variance $\sigma^2$, and is independent of the random effects $\boldsymbol{b}_i$. The evolution of PSA levels over time is modeled flexibly using B-splines. For the fixed effects part the spline consists of 3 internal knots. The internal knots are at $\mathcal{K} =\{0.1, 0.5, 4\}$ years, and boundary knots are at 0 and 7 years. For the random effects part there is only 1 internal knot at 0.1 years and the boundary knots are at 0 and 7 years. The choice of knots was based on exploratory analysis as well as on the basis of model selection criteria AIC and BIC. Age of patients was median centered to avoid numerical instabilities while estimating the parameters in the model. For the relative risk sub-model the hazard function we fit is given by:
+where, the measurement error $\varepsilon_i(t)$ is assumed normally distributed with mean zero and variance $\sigma^2$, and is independent of the random effects $\boldsymbol{b}_i$. The evolution of PSA over time is modeled flexibly using B-splines. For the fixed effects part the spline consists of 3 internal knots. The internal knots are at $\mathcal{K} =\{0.1, 0.5, 4\}$ years, and boundary knots are at 0 and 7 years. For the random effects part there is only 1 internal knot at 0.1 years and the boundary knots are at 0 and 7 years. The choice of knots was based on exploratory analysis as well as on the basis of model selection criteria AIC and BIC. Age of patients was median centered to avoid numerical instabilities while estimating the parameters in the model. For the relative risk sub-model the hazard function we fit is given by:
 
 \begin{equation}
 \label{eq : hazard_prias}
@@ -75,7 +75,7 @@ Slope: $\log_2 PSA$           & 2.407 & 0.319 & 1.791 & 3.069 & \textless0.000 \
 
 \subsection{Demonstration of personalized schedules}
 \label{subsec : demo_prias_pers_schedule}
-In this section, we demonstrate how the personalized schedules adapt the time of performing a biopsy according to the PSA history and results from repeat biopsies. We demonstrate this using schedules based on expected time of GR and on dynamic risk of GR. For the latter we select $\kappa$ such that Youden's $J$ is maximized (Section \ref{subsubsec : kappa_estimation}). The 3 patients we have chosen for the demonstration data set are part of PRIAS program and never experienced GR. In addition, they have had their repeat biopsies already. Hence a full scale comparison between PRIAS biopsy schedule and personalized scheduling algorithm's biopsy schedule is not possible.\\
+In this section, we demonstrate how personalized schedules adapt the time of performing a biopsy according to the PSA history and results from repeat biopsies. We demonstrate this using schedules based on expected time of GR and dynamic risk of GR. For the latter we select $\kappa$ such that Youden's $J$ is maximized (Section \ref{subsubsec : kappa_estimation}). The 3 patients we have chosen for the demonstration data set are part of PRIAS program and never experienced GR. In addition, they have had their repeat biopsies already. Hence a full scale comparison between PRIAS biopsy schedule and personalized scheduling algorithm's biopsy schedule is not possible.\\
 
 The first patient of interest is patient 3174 who was inducted in the PRIAS program at the age of 74 years. The posterior predictive distribution $g(T^*_j)$ for this patient depends only on the PSA measurements since no repeat biopsies were conducted in the time period we considered. The evolution of PSA, time of last biopsy and proposed times of biopsies are shown in Figure \ref{fig : prias_demo_pid_3174}. It can be seen that the PSA remains stable for the first 2 years of follow up, but increases rapidly after that for the next 2 years. Since the hazard of GR depends on PSA velocity (Table\ref{tab : PSA_survival}), the schedule of biopsy based on expected time of GR adjust the times of biopsy according to the steep rise in PSA profile. More specifically, at 2 years the proposed biopsy time is 12.5 years whereas at 4 years it decreases to 5.3 years. For schedules based on dynamic risk of GR, the $\kappa$ value which maximized Youden's $J$ was found to be between 1 and 0.9 at all time points. This survival probability corresponds to times very close to the first biopsy (time 0) due to the sharp rise in PSA values. Hence the biopsies are scheduled much earlier than those based on expected time of GR.\\
 
@@ -101,11 +101,11 @@ It is important to note that for patient 3174, a biopsy scheduled using expected
         \caption{Variance of the predictive distribution $g(T^*_j)$ over a period of 5 years for patient 911. Blue vertical lines indicate biopsies.}
         \label{fig : variance_pred_dist_911}
     \end{subfigure}
-    \label{fig : variance_pred_dist} 
     \caption{Variance of the predictive distribution $g(T^*_j)$}
+    \label{fig : variance_pred_dist}
 \end{figure}
 
-The second patient of interest is patient 911. Figure \ref{fig : prias_demo_pid_911} shows the evolution of PSA, time of last biopsy and proposed biopsy times for this patient. Between year 1.5 and year 2, the PSA rises sharply, and accordingly the personalized schedules based on expected time of GR prepone the proposed biopsy time from 14.2 years to 13.8 years. Between year 2 and year 3 the PSA decreases sharply and accordingly the proposed biopsy times are postponed from 13.8 years to 16.6 years. It can also be seen that PSA remains stable up to to year 4. Lastly, because no GR is found at the repeat biopsy performed at 4.1 years, this further leads to postponing of the biopsy times to 18.7 years. As for the schedule based on dynamic risk of GR, the optimal $\kappa$ values are always between 1 and 0.9 at all time points. Correspondingly, the biopsies are conducted very early till a negative biopsy is found at year 4.1, at which we see that the proposed biopsy time is postponed from 3.21 years to 14.8 years, despite the $\kappa$ being equal to 0.98 for both. For patient 911 the biopsies scheduled using $E_g[T^*_j]$ at year 4.1 are expected to be very close to the true GR time of the patient. This because the variance $Var_g[T^*_j]$ is quite low at year 4 as shown in Figure \ref{fig : variance_pred_dist_911}. From the figure it is also evident that the variance decreases considerably each time information about $T^*_j$ from a repeat biopsy is available.\\
+The second patient of interest is patient 911. Figure \ref{fig : prias_demo_pid_911} shows the evolution of PSA, time of last biopsy and proposed biopsy times for this patient. Between year 1.5 and year 2, the PSA rises sharply, and accordingly the personalized schedules based on expected time of GR prepone the proposed biopsy time from 14.2 years to 13.8 years. Between year 2 and year 3 the PSA decreases sharply and accordingly the proposed biopsy times are postponed from 13.8 years to 16.6 years. It can also be seen that PSA remains stable up to to year 4. Lastly, because no GR is found at the repeat biopsy performed at year 4.1, this further leads to postponing of the biopsy times to 18.7 years. As for the schedule based on dynamic risk of GR, the optimal $\kappa$ values are always between 1 and 0.9 at all time points. Correspondingly, the biopsies are conducted very early till a negative biopsy is found at year 4.1, at which we see that the proposed biopsy time is postponed from 3.21 years to 14.8 years, despite the $\kappa$ being equal to 0.98 for both. For patient 911 the biopsies scheduled using $E_g[T^*_j]$ at year 4.1 are expected to be very close to the true GR time of the patient. This because the variance $Var_g[T^*_j]$ is quite low at year 4 as shown in Figure \ref{fig : variance_pred_dist_911}. From the figure it is also evident that the variance decreases considerably each time information about $T^*_j$ from a repeat biopsy is available.\\
 
 \begin{figure}[!htb]
 \centering
@@ -121,7 +121,7 @@ From the previous 2 cases we saw that proposed times of biopsy depend on PSA vel
     \captionsetup{justification=centering}
      \begin{subfigure}[b]{\textwidth}
         \includegraphics[width=\textwidth]{images/prias_demo/case_2340_yesbiopsy.png}
-        \caption{No repeat biopsies is ignored.}
+        \caption{No repeat biopsy is ignored.}
         \label{fig : prias_demo_pid_2340_yes_biopsy}
     \end{subfigure}
     \begin{subfigure}[b]{\textwidth}
