--- a/report/pers_schedule/mainmatter/sim_study.tex
+++ b/report/pers_schedule/mainmatter/sim_study.tex
@@ -7,11 +7,11 @@ The application of personalized schedules for patients from PRIAS program demons
 \subsection{Simulation setup}
 \label{subsec : simulation_setup}
 \subsubsection{Patient population}
-For the simulation study we first select a population $\mathcal{P}$ of patients enrolled in AS. We assume that the PSA and hazard of GR for the patients from this population follows a joint model of the form postulated in Section \ref{subsec : jm_fit_prias}, with parameters $\boldsymbol{\theta}^{\mathcal{P}}$. These parameters are selected to be equal to the posterior mean of parameters $E[\boldsymbol{\theta} \mid \mathcal{D}^{PRIAS}]$ estimated from the joint model fitted to PRIAS data set (Section \ref{subsec : param_estimates_jm_fit_prias}). To demonstrate the efficacy of personalized schedules for patients with early as well late failure times, we generated the patients in population $\mathcal{P}$ from 3 equal sized sub-groups. The baseline hazard for each of the sub-group was assumed to be the hazard function of a Weibull distribution. The shape and scale parameters $(k, \lambda$) for this Weibull distribution are $(1.5, 4)$, $(3, 5)$ and $(4.5, 6)$.
+For the simulation study we first select a population $\mathcal{P}$ of patients enrolled in AS. We assume that the PSA and hazard of GR for the patients from this population follows a joint model of the form postulated in Section \ref{subsec : jm_fit_prias}, with parameters $\boldsymbol{\theta}^{\mathcal{P}}$. These parameters are selected to be equal to the posterior mean of parameters $E[\boldsymbol{\theta} \mid \mathcal{D}^{PRIAS}]$ estimated from the joint model fitted to PRIAS data set (Section \ref{subsec : param_estimates_jm_fit_prias}). To demonstrate the efficacy of personalized schedules for patients with early as well late failure times, we generated the patients in population $\mathcal{P}$ from 3 equal sized subgroups $G_1, G_2, G_3$. The baseline hazard for each of the three subgroups was assumed to be the hazard function of a Weibull distribution. The shape and scale parameters $(k, \lambda$) for this Weibull distribution are $(1.5, 4)$, $(3, 5)$ and $(4.5, 6)$ for $G_1, G_2$ and $G_3$ respectively. The effect of these parameters is that the variance in GR times is highest for $G_1$ and lowest for $G_3$, while the average GR is lowest in $G_1$ and highest in $G_3$.
 
 \subsubsection{Generating PSA values and GR times}
-From the population $\mathcal{P}$ we randomly sample a total of 200 data sets with 1000 patients each. For each of these patients, the longitudinal profiles for PSA In terms of average number of biopsies, the PRIAS schedule, schedules based on dynamic risk of GR and annual schedule are quite similar. However the dynamic risk of GR based schedules have much lower corresponding variance. In general we observe that there is an inverse relationship between offset number of biopsies.\\
-s are generated as per the visiting schedule of PRIAS study. i.e. Every 3 months for first 2 years and every 6 months thereafter. The true GR times are generated as per the simulated hazard of GR for the patient. We then divide each of the 200 simulated data sets into training (750 patients) and test (250 patients) parts. Keeping in line with the notation for joint model in Section \ref{subsec : jm_specification}, the observed data in the $k^{th}$ training data set can be represented as $\mathcal{D}^k = \{l_{ki}, r_{ki}, \boldsymbol{y}_{ki}; i = 1,\ldots 750\}$, where $\boldsymbol{y}_{ki}$ denotes the PSA measurements for the $i^{th}$ patient in the $k^{th}$ training data set. For training data patients we either observe the true event time $T^*_{ki}$, wherein $l_{ki} = r_{ki} = T^*_{ki}$, or we observe a random and non-informative censoring time $C_{ki} < T^*_{ki}$, wherein $l_{ki} = C_{ki}$ and $r_{ki} = \infty$. For the patients in the test data sets no censoring times are generated.
+From the population $\mathcal{P}$ we randomly sample a total of 254 data sets with 1000 patients each. For each of these patients, the longitudinal profiles for PSA In terms of average number of biopsies, the PRIAS schedule, schedules based on dynamic risk of GR and annual schedule are quite similar. However the dynamic risk of GR based schedules have much lower corresponding variance. In general we observe that there is an inverse relationship between offset number of biopsies.\\
+s are generated as per the visiting schedule of PRIAS study. i.e. Every 3 months for first 2 years and every 6 months thereafter. The true GR times are generated as per the simulated hazard of GR for the patient. We then divide each of the 254 simulated data sets into training (750 patients) and test (250 patients) parts. Keeping in line with the notation for joint model in Section \ref{subsec : jm_specification}, the observed data in the $k^{th}$ training data set can be represented as $\mathcal{D}^k = \{l_{ki}, r_{ki}, \boldsymbol{y}_{ki}; i = 1,\ldots 750\}$, where $\boldsymbol{y}_{ki}$ denotes the PSA measurements for the $i^{th}$ patient in the $k^{th}$ training data set. For training data patients we either observe the true event time $T^*_{ki}$, wherein $l_{ki} = r_{ki} = T^*_{ki}$, or we observe a random and non-informative censoring time $C_{ki} < T^*_{ki}$, wherein $l_{ki} = C_{ki}$ and $r_{ki} = \infty$. For the patients in the test data sets no censoring times are generated.
 
 \subsubsection{Personalized schedules for test patients}
 \label{subsubsec : sim_study_pers_sched_details}
@@ -20,7 +20,7 @@ We create personalized biopsy schedules only for the patients in the test data s
 To create personalized schedules we employ the algorithm described in Section \ref{subsec : pers_sched_algorithm}. The algorithm is run for 7 different settings, one each corresponding to the following: PRIAS schedule, annual schedule, expected time of GR, median time of GR, dynamic risk of GR with $\kappa$ chosen such that a) Youden's $J$ is maximized, b) $\text{F}_1$-Score is maximized. In addition to these a mixed approach (Section \ref{subsec : mixed_approach}) is also employed where a choice between median time of GR and dynamic risk of GR (Youden's $J$ maximized) is made before scheduling a biopsy.
 
 \subsection{Evaluating efficacy of scheduling methods}
-For a particular biopsy scheduling method $S$, the first criteria in the evaluation of efficacy of the method is the number of repeat biopsies $N^{bS}$ the corresponding schedule takes before GR is detected for a patient from the population. As we discussed earlier, the less the $N^{bS}$ the better it is for the patients. Our interest lies in the marginal distribution of $N^{bS}$ for the population $\mathcal{P}$. In its simplest form, the mean $E[N^{bS}]$ and variance $Var[N^{bS}]$ of the aforementioned distribution are indicators of the performance of the scheduling algorithm. More specifically, a low mean as well as low variance is desired. Other quantiles of the distribution may also be used evaluation criteria. For e.g. a method which takes less than 2 (say) biopsies in 95\% cases may be preferred.\\
+For a particular biopsy scheduling method $S$, the first criteria in the evaluation of efficacy of the method is the number of repeat biopsies $N^{bS}$ the corresponding schedule takes before GR is detected for a patient from the population. As we discussed earlier, the less the $N^{bS}$ the better it is for the patients. Our interest lies in the marginal distribution of $N^{bS}$ for the population $\mathcal{P}$. In its simplest form, the mean $E[N^{bS}]$ and variance $Var[N^{bS}]$ of the aforementioned distribution are indicators of the performance of the scheduling algorithm. More specifically, a low mean as well as low variance is desired. Other quantiles of the distribution may also be used evaluation criteria. For example a method which takes less than 2 (say) biopsies in 95\% cases may be preferred.\\
 
 The second criteria in evaluation of efficacy of a schedule is the offset. Given a scheduling method $S$, the offset for a particular patient $j$ is defined as $O^S_j = T^S_{j{N^{bS}_j}} - T^*_j$, where $N^{bS}_j$ is the number of biopsies required for patient $j$ before GR is detected and $T^S_{j{N^{bS}_j}} > T^*_j$ is the time at which GR is detected by the scheduling method $S$. Once again the interest lies in both the mean $E[O^S]$ and variance $Var[O^S]$ of the marginal distribution of offset.
 
@@ -37,61 +37,117 @@ where $\mathcal{G}_g(\cdot)$ is either a function of number of biopsies or of th
 \label{eq : loss_func_sim_study}
 L(S) = \lambda_1 E[N^{bS}] + \lambda_2 E[O^S] 
 \end{equation}
-The choice of $\lambda_1$ and $\lambda_2$ is not easy. This because biopsies have serious medical side effects and the cost of an extra biopsy cannot be quantified easily. To obviate this issue we utilize the equivalence between compound and constrained optimal designs \citep{cook1994equivalence}. More specifically, it can be shown that for any $\lambda_1$ and $\lambda_2$ there exists a constant $C>0$ for which minimization of loss function in Equation (\ref{eq : loss_func_sim_study}) is equivalent to minimization of the same, subject to the constraint that $E[O^S] < C$. i.e. The optimal schedule is the one with the least number of biopsies and an offset less than $C$. The choice of $C$ now can be based on the protocol of AS program. For e.g. in PRIAS the maximum gap between 2 repeat biopsies is 3 years. i.e. If GR is detected within 3 years of its occurrence, it is acceptable. The optimization in case of more than 2 criteria, such as in Equation (\ref{eq : loss_func_sim_study_generic}), the solution can be found by minimizing $\mathcal{G}_G(\cdot)$ under the constraint $\mathcal{G}_g < C_g; g=1, \ldots G-1$.\\
+The choice of $\lambda_1$ and $\lambda_2$ is not easy. This because biopsies have serious medical side effects and the cost of an extra biopsy cannot be quantified easily. To obviate this issue we utilize the equivalence between compound and constrained optimal designs \citep{cook1994equivalence}. More specifically, it can be shown that for any $\lambda_1$ and $\lambda_2$ there exists a constant $C>0$ for which minimization of loss function in Equation (\ref{eq : loss_func_sim_study}) is equivalent to minimization of the same, subject to the constraint that $E[O^S] < C$. i.e. The optimal schedule is the one with the least number of biopsies and an offset less than $C$. The choice of $C$ now can be based on the protocol of AS program. For example in PRIAS the maximum gap between 2 repeat biopsies is 3 years. i.e. If GR is detected within 3 years of its occurrence, it is acceptable. The optimization in case of more than 2 criteria, such as in Equation (\ref{eq : loss_func_sim_study_generic}), the solution can be found by minimizing $\mathcal{G}_G(\cdot)$ under the constraint $\mathcal{G}_g < C_g; g=1, \ldots G-1$.\\
 
-For the loss function in Equation (\ref{eq : loss_func_sim_study}), we estimate $E[N^{bS}]$, $Var[N^{bS}]$, $E[O^S]$ and $Var[O^S]$ using pooled estimates of each from the 200 repetitions of the simulation study. The estimates are calculated separately for each of the 7 methods mentioned in Section \ref{subsubsec : sim_study_pers_sched_details}. The pooled estimates for a scheduling method $S$ are calculated as following:
+For the loss function in Equation (\ref{eq : loss_func_sim_study}), we estimate $E[N^{bS}]$, $Var[N^{bS}]$, $E[O^S]$ and $Var[O^S]$ using pooled estimates of each from the 254 repetitions of the simulation study. The estimates are calculated separately for each of the 7 methods mentioned in Section \ref{subsubsec : sim_study_pers_sched_details}. The pooled estimates for a scheduling method $S$ are calculated as following:
 
 \begin{align*}
-\widehat{E[O^S]} &= \frac{\sum_{k=1}^{200} n_k \widehat{E[O^S_k]}}{\sum_{k=1}^{200} n_k}, \\
-\widehat{Var[O^S]} &= \frac{\sum_{k=1}^{200} (n_k - 1) \widehat{Var[O^S_k]}}{\sum_{k=1}^{200} (n_k-1)}, 
+\widehat{E[O^S]} &= \frac{\sum_{k=1}^{254} n_k \widehat{E[O^S_k]}}{\sum_{k=1}^{254} n_k}, \\
+\widehat{Var[O^S]} &= \frac{\sum_{k=1}^{254} (n_k - 1) \widehat{Var[O^S_k]}}{\sum_{k=1}^{254} (n_k-1)}, 
 \end{align*}
 where $n_k$ are the number of test patients in the $k^{th}$ simulation, $\widehat{E[O^S_k]} = \frac{\sum_{j=1}^{n_k}O^S_{kj}}{n_k}$ and $\widehat{Var[O^S_k]} = \frac{\sum_{j=1}^{n_k}(O^S_{kj} - \widehat{E[O^S_k]})^2}{n_k-1}$ are the estimated mean offset and estimated variance of the offset for the $k^{th}$ simulation, respectively. The estimates for number of biopsies $N^{bS}$ are calculated similarly.
 
 \subsection{Results}
-From the simulations we calculated the pooled estimates of the mean and variance of number of biopsies, and the same for the offset. They are summarized in Table \ref{table : sim_study_pooled_estimates} and Figure \ref{fig : meanNbVsOffset}. The annual schedule has the least estimated $E[O^S]$, of 6 months, and also the least $Var[O^S]$ among all the methods. The downside of the method is that it has the largest estimated $Var[N^{bS}]$, with $E[N^{bS}]$ being 5.2. If we compare it to the schedule based on expected time of GR, the $Var[N^{bS}]$ is almost 4.6 times less and on average 1.9 biopsies are scheduled before GR is detected. This however comes at a cost of having larger offsets. Expected time of GR and median time of GR, both have the highest $E[O^S]$ of around 15.1 and 13.9 months respectively. They also have the highest $Var[O^S]$. Thus there is an inverse relationship between offset and number of biopsies.\\
+From the simulations we calculated the pooled estimates of the mean and variance of number of biopsies/offset for the entire sample. The estimates are plotted in Figure \ref{fig : meanNbVsOffset} and also summarized in Table \ref{table : sim_study_pooled_estimates}. From the figure it is evident that those schedules which conduct less biopsies on average, have a higher average offset, and vice versa. For example, the annual schedule conducts 5.2 biopsies on average, which is the highest among all schedules, however it has the least average offset of 6 months as well. On the other hand the schedule based on expected time of GR conducts only 1.9 biopsies on average, the least among all schedules but it also has the highest average offset of 15 months. The schedule based on median time of GR performs almost the same as that based on expected time of GR. As mentioned earlier the variance in number of biopsies and offset are important as well. In this regard annual schedule has the largest $Var[N^{bS}]$ since it attempts to contain the offset within an year, and consequently it has the least $Var[O^S]$. Schedules based on expected and median time of GR perform the opposite in terms of variance.
 
 \begin{figure}[!htb]
 	\centering
     \captionsetup{justification=centering}
-	\includegraphics[width=0.8\textwidth]{images/sim_study/meanNbVsOffset.png}
-	\caption{Estimated mean number of biopsies and mean offset (months) for the 7 scheduling methods. Method names are abbreviated for ease of graphing.}
+	\includegraphics[width=0.8\textwidth]{images/sim_study/meanNbVsOffset_all.png}
+	\caption{Estimated mean number of biopsies and mean offset (months) for the 7 scheduling methods using all patients. Method names are abbreviated for ease of graphing.}
 	\label{fig : meanNbVsOffset}
 \end{figure}
-
-If we compare the PRIAS schedule and annual schedule the latter may be preferred since it offers the least $Var[O^S]$ and $E[O^S]$ while its $E[N^{bS}]$ and $Var[N^{bS}]$ are quite similar to that of PRIAS schedule. If we compare the PRIAS schedule with dynamic risk of GR based schedules, we can see that the schedule where $\kappa$ is chosen after maximizing $\text{F}_1$-Score, performs better than in PRIAS schedule in all aspects. The schedule where $\kappa$ is chosen after maximizing Youden's $J$ has a very large $Var[O^S]$ and hence is not preferable over PRIAS.
 
 \begin{table}[!htb]
 \centering
 \captionsetup{justification=centering}
-\caption{Pooled estimates of mean and variance of number of biopsies and offset for the simulation study.}
+\caption{Pooled estimates of mean and variance of number of biopsies and offset for all patients.}
 \label{table : sim_study_pooled_estimates}
 \begin{tabular}{@{}lrrrrr@{}}
 \toprule
-Schedule           & Total Patients & $E[N^{bS}]$ & $Var[N^{bS}]$ & $E[O^S]$ & $Var[O^S]$ \\ \midrule
-Annual             & 9983           & 5.244           & 6.51           & 6.014               & 11.877             \\
-PRIAS              & 9983           & 4.862           & 5.582          & 8.567               & 74.269             \\
-Expeced time of GR & 9983           & 1.932           & 1.428          & 15.142              & 147.276            \\
-Median time of GR  & 9983           & 2.079           & 2.030          & 13.859              & 140.235            \\
-$\text{F}_1$-Score           & 9983           & 4.735           & 4.923          & 6.634               & 20.034             \\
-Youden             & 9983           & 4.555           & 4.024          & 8.203               & 130.079            \\
-Mixed approach     & 9983           & 3.763           & 2.914          & 9.814               & 59.600             \\ \bottomrule
+Schedule           & Total Patients & $E[N^{bS}]$ & $E[O^{S}]$ & $Var[N^{bS}]$ & $Var[O^S]$ \\ \midrule
+Annual              & 63386                  & 5.237           & 6.001               & 6.421          & 11.874             \\
+PRIAS              & 63386                  & 4.858           & 8.464               & 5.523          & 74.223             \\
+Expected time of GR & 63386                  & 1.923           & 15.066              & 1.422          & 146.319            \\
+Median time of GR  & 63386                  & 2.066           & 13.899              & 2.003          & 139.773            \\
+$\text{F}_1$-Score           & 63386                  & 4.683           & 6.654               & 4.807          & 18.834             \\
+Youden's $J$             & 63386                  & 4.560            & 8.030                & 4.006          & 118.908            \\
+Mixed approach     & 63386                  & 3.763           & 9.744               & 2.878          & 58.356             \\ \bottomrule
 \end{tabular}
 \end{table}
 
-To assess the methods further, we combined data from all of the 50000 patients, and also plotted the box plots for number of biopsies and offset in Figure \ref{fig : nbBoxPlot} and Figure \ref{fig : offsetBoxPlot} respectively. Based on the combined data, we observed that both expected and median failure time of GR based schedules have 91.7\% and 92.5\% of patients below offset cutoff of 36 months, respectively. They also have 80.5\% and 82.3\% of patients below a cutoff of 24 months. Thus they seem to be quite practical. The mixed approach offers another practically viable solution, since neither it has large $Var[N^{bS}]$, nor $Var[O^S]$. The estimated $E[N^{bS}]$ is 3.8 and the estimated $E[O^S]$ is 9.8 months. For 99.9\% patients it has an offset below 36 months and for 95\% patients it has an offset below 24 months. Given this offset and the fact that it conducts much less biopsies than PRIAS schedule, annual schedule, and dynamic risk of GR based schedules, it is preferable over them.
+We observe that the PRIAS schedule performs more or less the same as annual schedule. Despite this the latter may be preferred over PRIAS since it conducts only 0.38 biopsies more on average, however unlike PRIAS it has very low variance of offset, thus guaranteeing early detection for everyone. If we compare the PRIAS schedule with dynamic risk of GR based schedules, we can see that the schedule where $\kappa$ is chosen after maximizing $\text{F}_1$-Score, performs better than in PRIAS schedule in all aspects. The schedule where $\kappa$ is chosen after maximizing Youden's $J$ has a very large $Var[O^S]$ and hence is not preferable over PRIAS. The mixed approach combines the benefits of methods with low $E[N^{bS}]$ and $Var[N^{bS}]$, and those methods with low $E[O^{S}]$ and $Var[O^S]$. It conducts 1.5 less biopsies than annual schedule on average and at 9.7 months the mean offset is less than an year.\\
+
+\begin{table}[!htb]
+\centering
+\captionsetup{justification=centering}
+\caption{Pooled estimates of mean and variance of number of biopsies and offset for subgroup $G_1$.}
+\label{table : sim_study_pooled_estimates_G1}
+\begin{tabular}{@{}lrrrrr@{}}
+\toprule
+Schedule           & Total Patients & $E[N^{bS}]$ & $E[O^{S}]$ & $Var[N^{bS}]$ & $Var[O^S]$ \\ \midrule
+Annual              & 21004                  & 4.306           & 6.024               & 9.788          & 11.747             \\
+PRIAS              & 21004                  & 4.032           & 7.951               & 8.221          & 63.528             \\
+Expected time of GR & 21001                  & 1.922           & 15.114              & 1.441          & 149.167            \\
+Median time of GR  & 20937                  & 2.068           & 13.87               & 1.999          & 138.396            \\
+$\text{F}_1$-Score           & 21061                  & 4.689           & 6.648               & 4.863          & 18.745             \\
+Youden's $J$             & 21017                  & 4.581           & 8.045               & 3.979          & 121.309            \\
+Mixed approach     & 21004                  & 3.252           & 10.361              & 4.611          & 73.781             \\ \bottomrule
+\end{tabular}
+\end{table}
+
+\begin{table}[!htb]
+\centering
+\captionsetup{justification=centering}
+\caption{Pooled estimates of mean and variance of number of biopsies and offset for subgroup $G_2$.}
+\label{table : sim_study_pooled_estimates_G2}
+\begin{tabular}{@{}lrrrrr@{}}
+\toprule
+Schedule           & Total Patients & $E[N^{bS}]$ & $E[O^{S}]$ & $Var[N^{bS}]$ & $Var[O^S]$ \\ \midrule
+Annual              & 21160                  & 5.181           & 5.95                & 4.567          & 12.03              \\
+PRIAS              & 21160                  & 4.817           & 8.569               & 3.98           & 75.716             \\
+Expected time of GR & 21151                  & 1.927           & 15.078              & 1.447          & 144.333            \\
+Median time of GR  & 21189                  & 2.062           & 13.947              & 1.994          & 140.633            \\
+$\text{F}_1$-Score           & 21133                  & 4.666           & 6.663               & 4.726          & 18.956             \\
+Youden's $J$             & 21167                  & 4.557           & 8.024               & 3.98           & 122.84            \\
+Mixed approach     & 21160                  & 3.702           & 10.359              & 1.869          & 60.415             \\ \bottomrule
+\end{tabular}
+\end{table}
+
+\begin{table}[!htb]
+\centering
+\captionsetup{justification=centering}
+\caption{Pooled estimates of mean and variance of number of biopsies and offset for subgroup $G_3$.}
+\label{table : sim_study_pooled_estimates_G3}
+\begin{tabular}{@{}lrrrrr@{}}
+\toprule
+Schedule           & Total Patients & $E[N^{bS}]$ & $E[O^{S}]$ & $Var[N^{bS}]$ & $Var[O^S]$ \\ \midrule
+Annual              & 21222                  & 6.214           & 6.03                & 3.118          & 11.851             \\
+PRIAS              & 21222                  & 5.717           & 8.866               & 2.977          & 82.915             \\
+Expected time of GR  & 21234                  & 1.921           & 15.006              & 1.375          & 145.426            \\
+Median time of GR   & 21260                  & 2.07            & 13.879              & 2.016          & 140.14             \\
+$\text{F}_1$-Score           & 21192                  & 4.695           & 6.65                & 4.841          & 18.789             \\
+Youden's $J$              & 21202                  & 4.541           & 8.02                & 4.061          & 112.559             \\
+Mixed approach     & 21222                  & 4.33            & 8.521               & 1.581          & 38.586             \\ \bottomrule
+\end{tabular}
+\end{table}
+
+We next check the performance of these methods for each of the 3 subgroups $G_1, G_2$ and $G_3$. Estimates of $E[N^{bS}]$, $Var[N^{bS}]$, $E[O^S]$ and $Var[O^S]$ for the 3 subgroups are presented in Table \ref{table : sim_study_pooled_estimates_G1}, Table \ref{table : sim_study_pooled_estimates_G2} and Table \ref{table : sim_study_pooled_estimates_G3}. We observe that all of the schedules which are based on personalized methods, i.e. expected time of GR, median time of GR and dynamic risk of GR based schedules perform the same across the subgroups, with trivial differences in estimates. On the other hand, the annual schedule conducts 6 biopsies on average for patients in $G_3$ as compared to 4 for patients in $G_1$. It also has $Var[N^{bS}]$ 3 times more for patients in $G_1$ compared to $G_3$. This can be attributed to the former having higher variance in GR times. However for annual schedule the $E[O^S]$ and $Var[O^S]$ remain almost the same in all groups and it always detects GR within an year of the occurrence. The PRIAS schedule differs for the 3 subgroups as well. For number of biopsies the dynamics are similar to that of annual schedule. However for offset, the PRIAS schedule has high $E[O^S]$ and $Var[O^S]$ for patients from $G_3$, i.e. patients who obtain GR later. As for the mixed approach, we observe that it conducts more biopsies on average for patients from $G_3$, however it also has the least $E[O^S]$, $Var[O^S]$ and $Var[N^{bS}]$ for the same group.\\
+
+To assess the methods further, we combined data from all of the 63386 patients, and also plotted the box plots for number of biopsies and offset in Figure \ref{fig : nbBoxPlot} and Figure \ref{fig : offsetBoxPlot} respectively. Based on the combined data, we observe that both expected and median failure time of GR based schedules have 91.7\% and 92.5\% of patients below offset cutoff of 36 months, respectively. They also have 80.5\% and 82.3\% of patients below a cutoff of 24 months. Thus they seem to be quite practical. The mixed approach offers another practically viable solution, since neither it has large $Var[N^{bS}]$, nor $Var[O^S]$. The estimated $E[N^{bS}]$ is 3.8 and the estimated $E[O^S]$ is 9.7 months. For 99.9\% patients it has an offset below 36 months and for 95\% patients it has an offset below 24 months. Given this offset and the fact that it conducts much less biopsies than PRIAS schedule, annual schedule, and dynamic risk of GR based schedules, it is preferable over them.
 
 \begin{figure}[!htb]
     \centering
     \captionsetup{justification=centering}
      \begin{subfigure}[b]{0.45\textwidth}
-        \includegraphics[width=\textwidth]{images/sim_study/nbBoxPlot.png}
+        \includegraphics[width=\textwidth]{images/sim_study/nbBoxPlot_all.png}
         \caption{Boxplot for number of biopsies.}
         \label{fig : nbBoxPlot}
     \end{subfigure}
     \begin{subfigure}[b]{0.45\textwidth}
-        \includegraphics[width=\textwidth]{images/sim_study/offsetBoxPlot.png}
+        \includegraphics[width=\textwidth]{images/sim_study/offsetBoxPlot_all.png}
         \caption{Boxplot for offset (months)}
         \label{fig : offsetBoxPlot}
     \end{subfigure}      
-    \caption{Boxplot for number of biopsies and offset (months), for all of the 50000 patients in the 200 simulated data sets. Method names are abbreviated for ease of graphing.}
+    \caption{Boxplot for number of biopsies and offset (months), for all of the 63386 patients in the 254 simulated data sets. Method names are abbreviated for ease of graphing.}
 \end{figure}
